2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (send-password-to-buffer-process): New command.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Add --query-driver= arguments to clangd.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (buffer-list-update-hook): Add `recentf-track-opened-file'.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Bind "C-c C-a" to `eglot-code-actions'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Remove command `+citre-enable'

	* init.el (+citre--get-major-modes-for-citre): Remove function.
	(+citre-enable): Remove command.  Use
	`enable-minor-mode-in-project' instead.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Remove command `prism-project'

	* init.el (prism-project): Remove commmand.  Use
	`enable-minor-mode-in-project' instead.
	(prism-project-mode-history): Remove variable.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Bind "`" to `meow-universal-argument'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Improve `enable-minor-mode-in-project'

	* site-lisp/dotemacs-core.el (dotemacs--project-hook-function):
	Use args.  Add docstring.
	(project-add-hook!): Add docstring to the hook function.
	(project-remove-hook!): Add docstring.  Add default value for
	PROJECT.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (project-remove-hook!): Remove empty hooks.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (project-remove-hook!): New command.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* init.el <git-commit>: Hide log-edit files buffer after commit.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	Add new command `enable-minor-mode-in-project'

	* site-lisp/dotemacs-core.el
	(dotemacs--project-hook-function, project-add-hook!): Allow
	multiple functions to be added to a single hook.
	(emmip--minor-mode-history, emmip--major-modes-history): New variables.
	(dotemacs--major-mode-completion-table): New function.
	(enable-minor-mode-in-project): New command.

2025-03-31  Zhengyi Fu  <i@fuzy.me>
